adding sass partials + color vars
@todo: need to rename all colors and list them at the
       top as the 'palette'. Right now they are a mess
       of weird unmaintainable names.

--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -1,1 +1,6 @@
-$header_color: #373940
+$black_bg      : #373940
+$black_bg2     : #36393f
+$black_header  : #41454d
+$grey_text     : #889fa9
+$blue_bg       : #8aa0aa
+$white_txt     : #fafafa
