--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -4,6 +4,13 @@
 
 @import "color-vars"
 @import "menu"
+@import "about"
+@import "rooms"
+@import "enquire"
+@import "rates"
+@import "facilities"
+@import "location"
+@import "contact"
 
 body *
   border: 1px black solid
