add color vars + basic styles to partials

--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -2,5 +2,7 @@ $black_bg      : #373940
 $black_bg2     : #36393f
 $black_header  : #41454d
 $grey_text     : #889fa9
+$grey_text2    : #717684
 $blue_bg       : #8aa0aa
 $white_txt     : #fafafa
+$blue_bg2      : #aeb7cd
