clean up color vars

--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -1,8 +1,11 @@
-$black_bg      : #373940
-$black_bg2     : #36393f
-$black_header  : #41454d
-$grey_text     : #889fa9
-$grey_text2    : #717684
-$blue_bg       : #8aa0aa
-$white_txt     : #fafafa
-$blue_bg2      : #aeb7cd
+$black1 : #373940
+$black2 : #36393f
+$black3 : #41454d
+
+$grey1  : #889fa9
+$grey2  : #717684
+
+$blue1  : #8aa0aa
+$blue2  : #aeb7cd
+
+$white1 : #fafafa
