--- a/assets/sass/_menu.sass
+++ b/assets/sass/_menu.sass
@@ -1,7 +1,7 @@
 @import "color-vars"
 
 #menu-wrapper
-  background-color: $black_bg
+  background-color: $black1
   color:            white
   text-align:       center
 
