--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -1,8 +1,8 @@
 #room-image
-  background-color: $black_bg
+  background-color: $black1
 
 #room-image p
-  color: $white_txt
+  color: $white1
 
 #room-title h4
-  color: $black_header
+  color: $black3
