--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -5,7 +5,7 @@
   background-color: $blue_bg
 
 #about-footer h4
-  color: $black_header
+  color: $black3
 
 #call-us, #email-us
   color: $white_txt
