fix color var typos for about sass section

--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -1,11 +1,11 @@
 #about-text
-  color: $grey_text
+  color: $grey1
 
 #about-footer
-  background-color: $blue_bg
+  background-color: $blue1
 
 #about-footer h4
   color: $black3
 
 #call-us, #email-us
-  color: $white_txt
+  color: $white1
