remove borders, remove gutter width

--- a/assets/sass/_menu.sass
+++ b/assets/sass/_menu.sass
@@ -4,6 +4,7 @@
   background-color: $black1
   color:            white
   text-align:       center
+  padding-bottom:    20px
 
 #menu
   border: 1px white solid
