--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -1,3 +1,6 @@
+#about-wrapper
+  padding-top: 20px
+
 #about-text
   color: $grey1
 
@@ -6,6 +9,13 @@
 
 #about-footer h4
   color: $black3
+
+#about-logo
+  text-align: center
+
+#about-logo h4
+  margin-top:    0
+  margin-bottom: 20px 
 
 #call-us, #email-us
   color: $white1
