add information margin styles

--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -4,12 +4,6 @@
 #about-text
   color: $grey1
 
-#about-footer
-  background-color: $blue1
-
-#about-footer h4
-  color: $black3
-
 #about-logo
   text-align: center
 
@@ -17,5 +11,18 @@
   margin-top:    0
   margin-bottom: 20px 
 
+#about-footer
+  padding-top:      40px
+  background-color: $blue1
+
+#about-footer h4
+  color: $black3
+
 #call-us, #email-us
-  color: $white1
+  color:  $white1
+
+#call-us
+  margin-bottom: 3px
+
+#email-us
+  margin-top: 3px
