add title centering + dummy images

--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -5,7 +5,8 @@
   color: $white1
 
 #room-title h4
-  color: $black3
+  color:      $black3
+  text-align: center
 
 #room-image-text
   text-align:    center
