--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -14,6 +14,7 @@
 #about-footer
   padding-top:      40px
   background-color: $blue1
+  padding-bottom:   40px
 
 #about-footer h4
   color: $black3
