add fonts as global (this may suck ... unsure)

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -14,3 +14,20 @@
 
 // body *
 //   border: 1px white solid
+
+// global fonts
+p
+  font-family: "minion-pro",serif
+  font-style: normal
+  font-weight: 400
+
+h1, h2, h3, h4, h5
+  font-family: "abril-fatface",serif
+  font-style: italic
+  font-weight: 400
+
+#about-footer *
+  font-size: 1em
+  font-family: "brandon-grotesque",sans-serif
+  font-style: normal
+  font-weight: 400
