--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -15,6 +15,7 @@
   padding-top:      40px
   background-color: $blue1
   padding-bottom:   40px
+  text-align: center
 
 #about-footer h4
   color: $black3
