--- a/assets/sass/_enquire.sass
+++ b/assets/sass/_enquire.sass
@@ -15,6 +15,8 @@ form input, form textarea
 .form-control
   margin-left: 8%
   width: 85%
+  font-size: 0.8em
+  color: $grey3
 
 form #name
   margin-top: 130px
