--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5
   font-style: italic
   font-weight: 400
 
-#about-footer *
+#about-footer *, #room-image-text p
   font-size: 1em
   font-family: "brandon-grotesque",sans-serif
   font-style: normal
