add rooms title margin

--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -4,6 +4,10 @@
 #room-image p
   color: $white1
 
+#room-title
+  padding-top: 20px
+  padding-bottom: 20px
+
 #room-title h4
   color:      $black3
   text-align: center
