add rough template for overlays

--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -16,3 +16,11 @@
   text-align:    center
   margin-top:    20px
   margin-bottom: 20px
+
+.overlay
+  background-color: $blue2
+  bottom: 0
+  left: 0
+  opacity: 0.5
+  position: absolute
+  width: 100%
