--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -18,9 +18,13 @@
   margin-bottom: 20px
 
 .overlay
+  color: $white1
   background-color: $blue2
   bottom: 0
   left: 0
-  opacity: 0.5
+  opacity: 0.8
   position: absolute
   width: 100%
+
+.overlay-content
+  padding-left: 10px
