remove submit button hovering styles

--- a/assets/sass/_enquire.sass
+++ b/assets/sass/_enquire.sass
@@ -28,6 +28,11 @@ form #name
   font-size: 1em
   color: $white1
 
+.btn-default:hover
+  color: $black1
+  background: none
+  border: none
+
 #form-header
   margin-top: 10px
   background-color: $blue3
