gave form relative positioning to push it over

--- a/assets/sass/_enquire.sass
+++ b/assets/sass/_enquire.sass
@@ -4,6 +4,10 @@
 #enquire-inner-wrapper
   background-color: $black3
 
+#enquire-inner-wrapper
+  position: relative
+  top: 20px
+
 #enquire-submit
   text-align: center
   margin-bottom: 20px
