giving rates relative positioning

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -1,2 +1,8 @@
 #rates-wrapper
+  text-align: center
+  margin-top: 40px
   background-color: $blue2
+
+#rates-head h4
+  position: relative
+  top: -20px
