add styles for rates section

--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -9,5 +9,7 @@ $grey3  : #65676d
 $blue1  : #8aa0aa
 $blue2  : #aeb7cd
 $blue3  : #95afba
+$blue4  : #738e99
+$blue5  : #9ba4ba
 
 $white1 : #fafafa
