--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -2,7 +2,61 @@
   text-align: center
   margin-top: 40px
   background-color: $blue2
+  height: 665px  /* @TODO: ONLY MOBILE */
 
 #rates-head h4
   position: relative
   top: -20px
+
+.rates-left
+  padding-right: 5px
+  padding-bottom: 10px
+
+.rates-right
+  padding-left: 5px
+
+.rates-left .title,
+.rates-left .sub-title1,
+.rates-left .sub-title2
+  background-color: $blue3
+
+.rates-right .title,
+.rates-right .sub-title1,
+.rates-right .sub-title2
+  background-color: $blue5
+
+#rates-head p
+  color: $white1
+
+#rates-table
+  padding-left: 5px
+  padding-right: 5px
+
+#rates-table .title,
+#rates-table .sub-title1,
+#rates-table .sub-title2,
+  padding-left: 10px
+  padding-right: 10px
+  text-align: left
+
+#rates-table .title,
+#rates-table .price-box
+  color: $white1
+
+#rates-table .title
+  font-size: 1.5em
+
+#rates-table .sub-title1
+  font-size: 1.5em
+  color: $black3
+
+#rates-table .sub-title2
+  padding-bottom: 10px
+  font-size: 1.1em
+  color: $blue4
+
+#rates-table .price-box
+  padding-top: 15px
+  padding-bottom: 15px
+  background-color: $black3
+  font-size: 3em
