--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -12,8 +12,8 @@
 @import "location"
 @import "contact"
 
-body *
-  border: 1px white solid
+// body *
+//   border: 1px white solid
 
 // global fonts
 p
