add basic facilities styling

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -5,8 +5,10 @@
   height: 665px  /* @TODO: ONLY MOBILE */
 
 #rates-head h4
-  position: relative
-  top: -20px
+  color      : $black3
+  text-align : center
+  position   : relative
+  top        : -20px
 
 .rates-left
   padding-right: 5px
