add styles for 'location' section

--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -5,6 +5,7 @@ $black3 : #41454d
 $grey1  : #889fa9
 $grey2  : #717684
 $grey3  : #65676d
+$grey4  : #7f8083
 
 $blue1  : #8aa0aa
 $blue2  : #aeb7cd
