--- a/assets/sass/_facilities.sass
+++ b/assets/sass/_facilities.sass
@@ -1,13 +1,15 @@
 #facilities-title h4
-  color:      $black3
-  text-align: center
+  color              : $black3
+  text-align         : center
 
 #major-icons
+  background-color   : $black1
+
   h5
-    text-align: center
-    padding: 10px 10px 10px 10px
-    color: $grey2
+    text-align       : center
+    padding          : 10px 10px 10px 10px
+    color            : $grey2
 
 #minor-icons
-  padding-top: 20px
-  padding-bottom: 20px
+  padding-top        : 20px
+  padding-bottom     : 20px
