--- a/assets/sass/_location.sass
+++ b/assets/sass/_location.sass
@@ -1,5 +1,16 @@
-#major-icons
-  background-color: $black1
+#location-title h4
+  color: $black3
+  text-align: center
 
-#major-icons p
-  color: $grey2
+#location-wrapper
+  padding-left: 10px
+  padding-right: 10px
+
+#location-map
+  padding-bottom: 20px
+
+#location-left-text
+  color: $grey4
+
+#walking-icons
+  text-align: center
