add menu dropdown functionality

--- a/assets/sass/_bootstrap-variables.sass
+++ b/assets/sass/_bootstrap-variables.sass
@@ -359,15 +359,15 @@ $grid-gutter-width:         0px
 
 // Basics of a navbar
 // $navbar-height:                    50px
-// $navbar-margin-bottom:             $line-height-computed
+$navbar-margin-bottom:                0
 // $navbar-border-radius:             $border-radius-base
-// $navbar-padding-horizontal:        floor(($grid-gutter-width / 2))
-// $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2)
+$navbar-padding-horizontal:           0
+$navbar-padding-vertical:             0
 // $navbar-collapse-max-height:       340px
 
 // $navbar-default-color:             #777
-// $navbar-default-bg:                #f8f8f8
-// $navbar-default-border:            darken($navbar-default-bg, 6.5%)
+$navbar-default-bg:                   #373940 
+$navbar-default-border:               none
 
 // Navbar links
 // $navbar-default-link-color:                #777
@@ -379,14 +379,14 @@ $grid-gutter-width:         0px
 // $navbar-default-link-disabled-bg:          transparent
 
 // Navbar brand label
-// $navbar-default-brand-color:               $navbar-default-link-color
+$navbar-default-brand-color:                  white
 // $navbar-default-brand-hover-color:         darken($navbar-default-brand-color, 10%)
 // $navbar-default-brand-hover-bg:            transparent
 
 // Navbar toggle
-// $navbar-default-toggle-hover-bg:           #ddd
+$navbar-default-toggle-hover-bg:              none
 // $navbar-default-toggle-icon-bar-bg:        #888
-// $navbar-default-toggle-border-color:       #ddd
+$navbar-default-toggle-border-color:          none
 
 
 // Inverted navbar
