--- a/assets/sass/_menu.sass
+++ b/assets/sass/_menu.sass
@@ -6,6 +6,27 @@
   text-align:       center
   padding-bottom:    20px
 
+.navbar-brand
+  text-align: center
+
+.navbar-toggle
+  position: relative
+  top: 13px
+  float: none !important
+
+.navbar-default .navbar-nav > li > a
+  color: white
+
+  &:hover
+    color: $blue2 !important
+
+.navbar-nav #first-menu-item
+  margin-top: 20px !important
+
+.navbar-collapse
+  border: none     !important
+  box-shadow: none !important
+
 #menu
   border: 1px white solid
 
