--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -16,6 +16,7 @@
 //   border: 1px white solid
 
 // global fonts
+// @TODO - THIS SUCKS, REFACTOR
 p
   font-family: "minion-pro",serif
   font-style: normal
@@ -31,3 +32,18 @@ h1, h2, h3, h4, h5
   font-family: "brandon-grotesque",sans-serif
   font-style: normal
   font-weight: 400
+
+// @TODO - MAKE ITS OWN PARTIAL
+// carousel navigation override
+.custom-carousel-control
+  color: #FFF
+  z-index: 5
+  font-size: 20px
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6)
+  background-color: $blue6
+  padding: 20px 20px 20px 20px
+  margin: 5px 5px 5px 5px
+
+#nav-control
+  position: absolute
+  bottom: 10%
