--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -11,6 +11,7 @@
 @import "facilities"
 @import "location"
 @import "contact"
+@import "carousel"
 
 // body *
 //   border: 1px white solid
@@ -32,18 +33,3 @@ h1, h2, h3, h4, h5
   font-family: "brandon-grotesque",sans-serif
   font-style: normal
   font-weight: 400
-
-// @TODO - MAKE ITS OWN PARTIAL
-// carousel navigation override
-.custom-carousel-control
-  color: #FFF
-  z-index: 5
-  font-size: 20px
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6)
-  background-color: $blue6
-  padding: 20px 20px 20px 20px
-  margin: 5px 5px 5px 5px
-
-#nav-control
-  position: absolute
-  bottom: 10%
