--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -22,9 +22,17 @@
   background-color: $blue2
   bottom: 0
   left: 0
-  opacity: 0.8
+  background: rgba(141, 161, 170, 0.4)
   position: absolute
   width: 100%
 
+  .col-xs-6
+    padding: 3px 3px 3px 3px
+
 .overlay-content
   padding-left: 10px
+
+  h4
+    padding: 0
+    margin-bottom: 0
+    text-transform: uppercase
