--- a/assets/sass/_carousel.sass
+++ b/assets/sass/_carousel.sass
@@ -3,7 +3,7 @@
   z-index: 5
   font-size: 20px
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6)
-  background-color: $blue6
+  background: rgba(141, 161, 170, 0.4)
   padding: 20px 20px 20px 20px
   margin: 5px 5px 5px 5px
 
