setup custom bootstrap config + update TODOs

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,6 +1,9 @@
 @import "bootstrap-compass"
 @import "bootstrap-variables"
-@import "bootstrap"
+
+// select bootstrap components from _bootstrap-custom.scss
+// comment in/out whatever, re-compile, voila 
+@import "bootstrap-custom"
 
 @import "color-vars"
 @import "menu"
