--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -1,31 +1,30 @@
 #about-wrapper
-  padding-top: 20px
+  padding-top      : 20px
 
 #about-text
-  color: $grey1
-  padding-bottom: 20px
+  color            : $grey1
+  padding-bottom   : 20px
 
 #about-logo
-  text-align: center
+  text-align       : center
 
-#about-logo h4
-  margin-top:    0
-  margin-bottom: 20px 
+  h4
+    margin-top     : 0
+    margin-bottom  : 20px
 
 #about-footer
-  padding-top:      40px
-  background-color: $blue1
-  padding-bottom:   40px
-  text-align: center
+  padding-top      : 40px
+  background-color : $blue1
+  padding-bottom   : 40px
+  text-align       : center
 
-#about-footer h4
-  color: $black3
-
-#call-us, #email-us
-  color:  $white1
+  h4
+    color          : $black3
 
 #call-us
-  margin-bottom: 3px
+  color            : $white1
+  margin-bottom    : 3px
 
 #email-us
-  margin-top: 3px
+  color            : $white1
+  margin-top       : 3px
