--- a/assets/sass/_color-vars.sass
+++ b/assets/sass/_color-vars.sass
@@ -1,3 +1,8 @@
+// open to interpretation on what the colors
+// should actually be called! Anyway, this is
+// the entire list of them color picked from 
+// the PSD.
+
 $black1 : #373940
 $black2 : #36393f
 $black3 : #41454d
