--- a/assets/sass/_menu.sass
+++ b/assets/sass/_menu.sass
@@ -1,34 +1,32 @@
-@import "color-vars"
-
 #menu-wrapper
-  background-color: $black1
-  color:            white
-  text-align:       center
-  padding-bottom:    20px
+  background-color                   : $black1
+  color                              : white
+  text-align                         : center
+  padding-bottom                     : 20px
 
 .navbar-brand
-  text-align: center
+  text-align                         : center
 
 .navbar-toggle
-  position: relative
-  top: 13px
-  float: none !important
+  position                           : relative
+  top                                : 13px
+  float                              : none !important
 
 .navbar-default .navbar-nav > li > a
-  color: white
+  color                              : white
 
   &:hover
-    color: $blue2 !important
+    color                            : $blue2 !important
 
 .navbar-nav #first-menu-item
-  margin-top: 20px !important
+  margin-top                         : 20px !important
 
 .navbar-collapse
-  border: none     !important
-  box-shadow: none !important
+  border                             : none     !important
+  box-shadow                         : none !important
 
 #menu
-  border: 1px white solid
+  border                             : 1px white solid
 
-#menu p
-  margin-top: 10px
+  p
+    margin-top                       : 10px
