--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -1,38 +1,38 @@
 #room-image
-  background-color: $black1
+  background-color : $black1
 
-#room-image p
-  color: $white1
+  p
+    color          : $white1
 
 #room-title
-  padding-top: 20px
-  padding-bottom: 20px
-
-#room-title h4
-  color:      $black3
-  text-align: center
-
-#room-image-text
-  text-align:    center
-  margin-top:    20px
-  margin-bottom: 20px
-
-.overlay
-  color: $white1
-  background-color: $blue2
-  bottom: 0
-  left: 0
-  background: rgba(141, 161, 170, 0.4)
-  position: absolute
-  width: 100%
-
-  .col-xs-6
-    padding: 3px 3px 3px 3px
-
-.overlay-content
-  padding-left: 10px
+  padding-top      : 20px
+  padding-bottom   : 20px
 
   h4
-    padding: 0
-    margin-bottom: 0
-    text-transform: uppercase
+    color          : $black3
+    text-align     : center
+
+#room-image-text
+  text-align       : center
+  margin-top       : 20px
+  margin-bottom    : 20px
+
+.overlay
+  color            : $white1
+  background-color : $blue2
+  bottom           : 0
+  left             : 0
+  background       : rgba(141, 161, 170, 0.4)
+  position         : absolute
+  width            : 100%
+
+  .col-xs-6
+    padding        : 3px 3px 3px 3px
+
+.overlay-content
+  padding-left     : 10px
+
+  h4
+    padding        : 0
+    margin-bottom  : 0
+    text-transform : uppercase
