--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -5,6 +5,8 @@
 // comment in/out whatever, re-compile, voila 
 @import "bootstrap-custom"
 
+// all my custom partials
+// modular Sass saves lives
 @import "color-vars"
 @import "menu"
 @import "about"
