--- a/assets/sass/_facilities.sass
+++ b/assets/sass/_facilities.sass
@@ -6,10 +6,28 @@
   background-color   : $black1
 
   h5
-    text-align       : center
-    padding          : 10px 10px 10px 10px
+    position: relative
+    left: 5px
+    padding          : 10px
     color            : $grey2
+
+  span
+    padding-left: 20px
+    float: left
 
 #minor-icons
   padding-top        : 20px
   padding-bottom     : 20px
+
+  h5
+    position: relative
+    left: 5px
+    padding          : 10px
+    color            : $grey2
+
+  span
+    padding-left: 20px
+    float: left
+
+.glyph-facility
+  color: $grey1
