--- a/assets/sass/_location.sass
+++ b/assets/sass/_location.sass
@@ -12,5 +12,12 @@
 #location-left-text
   color             : $grey4
 
-#walking-icons
+#walking-icons, #walking-times
   text-align        : center
+
+#walking-times
+  h4
+    margin-top: 0
+
+  span
+    margin-bottom: 0
