--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -36,3 +36,14 @@
     padding        : 0
     margin-bottom  : 0
     text-transform : uppercase
+
+  p
+    display: inline
+    font-size: 0.8em
+    font-weight: 900
+
+  .top span
+    margin-bottom: 0
+
+  .bottom span
+    margin-top: 0
