--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -19,7 +19,16 @@
 @import "carousel"
 
 // body *
-//   border: 1px white solid
+//   border: 1px black solid
+
+// global logos
+.glyphicon
+  margin-top: 10px
+  margin-bottom: 10px
+  font-size: 26px
+
+.glyph-small
+  font-size: 15px
 
 // global fonts
 // @TODO - THIS SUCKS, REFACTOR
