tighten up the mobile styles

--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -1,30 +1,38 @@
 #about-wrapper
-  padding-top      : 20px
+  padding-top: 20px
 
-#about-text
-  color            : $grey1
-  padding-bottom   : 20px
+#about-text p
+  color: $grey1
+  line-height: 23px
+  padding-bottom: 20px
 
 #about-logo
-  text-align       : center
+  text-align: center
 
   h4
-    margin-top     : 0
-    margin-bottom  : 20px
+    margin-top: 0
+    margin-bottom: 20px
 
 #about-footer
-  padding-top      : 40px
-  background-color : $blue1
-  padding-bottom   : 40px
-  text-align       : center
+  padding-top: 40px
+  background-color: $blue1
+  padding-bottom: 40px
+  text-align: center
 
   h4
-    color          : $black3
+    color: $black3
+    font-weight: 900px
+    font-size: 1.3em
+
+  h5
+    color: $white1
+    font-weight: 600px
+    font-size: 1.2em
 
 #call-us
-  color            : $white1
-  margin-bottom    : 3px
+  color: $white1
+  margin-bottom: 3px
 
 #email-us
-  color            : $white1
-  margin-top       : 3px
+  color: $white1
+  margin-top: 3px
