--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -2,13 +2,13 @@
   text-align: center
   margin-top: 40px
   background-color: $blue2
-  height: 665px  /* @TODO: ONLY MOBILE */
+  height: 690px  /* @TODO: ONLY MOBILE */
 
 #rates-head h4
-  color      : $black3
-  text-align : center
-  position   : relative
-  top        : -20px
+  color: $black3
+  text-align: center
+  position: relative
+  top: -20px
 
 .rates-left
   padding-right: 5px
@@ -47,6 +47,8 @@
 
 #rates-table .title
   font-size: 1.5em
+  position: relative
+  top: 8px
 
 #rates-table .sub-title1
   font-size: 1.5em
@@ -62,3 +64,6 @@
   padding-bottom: 15px
   background-color: $black3
   font-size: 3em
+
+#rates-text
+  line-height: 23px
