--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -17,11 +17,12 @@
 @import "location"
 @import "contact"
 @import "carousel"
+@import "fonts"
 
 // body *
 //   border: 1px black solid
 
-// global logos
+// BOOTSTRAP MISC OVERRIDES
 .glyphicon
   margin-top: 10px
   margin-bottom: 10px
@@ -29,21 +30,3 @@
 
 .glyph-small
   font-size: 15px
-
-// global fonts
-// @TODO - THIS SUCKS, REFACTOR
-p
-  font-family: "minion-pro",serif
-  font-style: normal
-  font-weight: 400
-
-h1, h2, h3, h4, h5
-  font-family: "abril-fatface",serif
-  font-style: italic
-  font-weight: 400
-
-#about-footer *, #room-image-text p
-  font-size: 1em
-  font-family: "brandon-grotesque",sans-serif
-  font-style: normal
-  font-weight: 400
