add desktop menu html and styles

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -18,9 +18,10 @@
 @import "contact"
 @import "carousel"
 @import "fonts"
+@import "media-queries"
 
 // body *
-//   border: 1px black solid
+//   border: 1px white solid
 
 // BOOTSTRAP MISC OVERRIDES
 .glyphicon
