add desktop only about image + text

--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -36,3 +36,20 @@
 #email-us
   color: $white1
   margin-top: 3px
+
+#about-header-img
+  position: relative
+
+#about-img-overlay
+  background: rgba(62, 65, 72, 0.8)
+  color: $white1
+  position: absolute
+  right: 3%
+  width: 30%
+  top: 40%
+
+  p
+    text-align: right
+    margin: 10px 10px 10px 10px
+    padding-left: 70px
+    padding-right: 30px
