--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -1,5 +1,7 @@
-/* MENU */
+/* Style overrides for non-mobile version */
 @media (min-width: $screen-sm)
+
+  /* Menu section */
   .navbar-nav #first-menu-item
     margin-top: 0 !important
 
@@ -12,3 +14,8 @@
 
   #menu-middle-logo .glyphicon
     margin-top: 0
+
+
+  /* About section */
+  #about-wrapper
+    padding-top: 0
