add About section for Desktop - html and styles

--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -19,3 +19,9 @@
   /* About section */
   #about-wrapper
     padding-top: 0
+
+  #about-logo .title
+    margin-top: 20px
+
+  #about-footer
+    padding-top: 113px
