add nav-control styles

--- a/assets/sass/_carousel.sass
+++ b/assets/sass/_carousel.sass
@@ -1,4 +1,5 @@
-.custom-carousel-control
+.custom-carousel-control-1,
+.custom-carousel-control-2
   color: #FFF
   z-index: 5
   font-size: 20px
@@ -6,7 +7,7 @@
   background: rgba(141, 161, 170, 0.4)
   padding: 20px 20px 20px 20px
 
-#nav-control
-  position: absolute
-  bottom: 5%
-  left: 20px
+@media (max-width: $screen-xs)
+  #nav-control
+    position: absolute
+    bottom: 7%
