finish room html + styles

--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -30,3 +30,16 @@
     position: absolute
     right: 2%
     bottom: 7%
+
+  /* Rooms section */
+  #room-title .title
+    text-align: left
+
+  #room-title .col-xs-offset-1
+    margin-left: 20px !important
+
+  .overlay
+    background: none !important
+
+  .right-overlay-md
+    text-align: right
