add rates desktop html + styles

--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -43,3 +43,19 @@
 
   .right-overlay-md
     text-align: right
+
+  /* Rates section */
+  #rates-head
+    p
+      margin-right: 40px
+      margin-bottom: 20px
+
+    h4, #rates-text
+      margin-right: 40px
+      text-align: right
+
+  #rates-table .title
+    top: 0
+
+  #rates-wrapper
+    height: 100%
