add TODO + text for 'md-only' section

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -67,3 +67,17 @@
 
 #rates-text
   line-height: 23px
+
+#rates-info-title
+  float: left
+
+#rates-info-md
+  margin: 10px 10px 10px 10px
+
+  .row-lower,
+  #rates-info-title
+    color: $white1
+    background-color: $black1
+
+#rates-info-title
+  padding: 10px 10px 10px 10px
