add style for additional information section

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -68,11 +68,15 @@
 #rates-text
   line-height: 23px
 
-#rates-info-title
-  float: left
-
 #rates-info-md
   margin: 10px 10px 10px 10px
+  text-align: left
+
+  .col-md-6
+    padding-left: 20px
+
+  ul
+    padding-left: 15px
 
   .row-lower,
   #rates-info-title
@@ -80,4 +84,14 @@
     background-color: $black1
 
 #rates-info-title
+  text-align: left
   padding: 10px 10px 10px 10px
+
+  span
+    float: left
+
+  h5
+    text-transform: uppercase
+    font-size: 1.2em
+    padding-top: 5px
+    margin-left: 40px
