add style + html for facilities section

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -2,7 +2,7 @@
   text-align: center
   margin-top: 40px
   background-color: $blue2
-  height: 690px  /* @TODO: ONLY MOBILE */
+  height: 690px  /* ONLY MOBILE */
 
 #rates-head h4
   color: $black3
@@ -77,6 +77,9 @@
 
   ul
     padding-left: 15px
+
+  h5
+    margin-bottom: 2px
 
   .row-lower,
   #rates-info-title
