--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -58,4 +58,21 @@
     top: 0
 
   #rates-wrapper
-    height: 100%
+    height: 700px  /* DESKTOP ONLY */
+
+  /* Facilities section */
+  #facilities-title
+    float: left
+
+  #desktop-icons
+    .col-md-4-dark
+      background-color: $black3
+      color: $grey2
+
+    h5
+      padding-top: 8px
+      margin-left: 60px
+
+    span
+      float: left
+      margin-left: 20px
