add borders - easier to see layout

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -20,8 +20,8 @@
 @import "fonts"
 @import "media-queries"
 
-// body *
-//   border: 1px black solid
+body *
+  border: 1px black solid
 
 // BOOTSTRAP MISC OVERRIDES
 .glyphicon
