--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -69,7 +69,7 @@
   line-height: 23px
 
 #rates-info-md
-  margin: 10px 10px 10px 10px
+  padding: 10px 10px 10px 10px
   text-align: left
 
   .col-md-6
