added svg icons

--- a/assets/sass/_about.sass
+++ b/assets/sass/_about.sass
@@ -37,6 +37,10 @@
   color: $white1
   margin-top: 3px
 
+#email-us, #call-us, #address
+  font-family: $serif
+  text-transform: none
+
 #about-header-img
   position: relative
 
