--- a/assets/sass/_carousel.sass
+++ b/assets/sass/_carousel.sass
@@ -10,4 +10,7 @@
 @media (max-width: $screen-xs)
   #nav-control
     position: absolute
-    bottom: 7%
+    bottom: 4%
+    text-align: center
+    z-index: 1
+
