--- a/assets/sass/_facilities.sass
+++ b/assets/sass/_facilities.sass
@@ -3,13 +3,17 @@
   text-align: center
 
 #major-icons
-  background-color: $black1
+  background-color: $black3
+  font-family: $sans-serif
+
 
   h5
     position: relative
     left: 5px
     padding: 10px
     color: $grey2
+    font-family: $sans-serif
+    font-size: 1.4em
 
   span
     padding-left: 20px
@@ -24,10 +28,11 @@
     left: 5px
     padding: 10px
     color: $grey2
+    font-family: $sans-serif
 
   span
     padding-left: 20px
     float: left
 
-.glyph-facility
-  color: $grey1
+.icon
+  color: $blue3
