--- a/assets/sass/_menu.sass
+++ b/assets/sass/_menu.sass
@@ -2,7 +2,7 @@
   background-color: $black1
   color: white
   text-align: center
-  padding-bottom: 20px
+  padding: 35px
 
 .navbar-brand
   text-align: center
