--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -21,11 +21,14 @@
 .rates-left .sub-title1,
 .rates-left .sub-title2
   background-color: $blue3
+  font-family: $sans-serif
 
 .rates-right .title,
 .rates-right .sub-title1,
 .rates-right .sub-title2
   background-color: $blue5
+  font-family: $sans-serif
+  font-weight: 300
 
 #rates-head p
   color: $white1
@@ -64,6 +67,7 @@
   padding-bottom: 15px
   background-color: $black3
   font-size: 3em
+  font-family: $heading
 
 #rates-text
   line-height: 23px
