--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -8,6 +8,8 @@
 // all my custom partials
 // modular Sass saves lives
 @import "color-vars"
+@import "fonts"
+@import "icons"
 @import "menu"
 @import "about"
 @import "rooms"
@@ -17,11 +19,10 @@
 @import "location"
 @import "contact"
 @import "carousel"
-@import "fonts"
 @import "media-queries"
+@import "header"
 
-body *
-  border: 1px black solid
+
 
 // BOOTSTRAP MISC OVERRIDES
 .glyphicon
@@ -31,3 +32,5 @@ body *
 
 .glyph-small
   font-size: 15px
+
+
