--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,20 +1,24 @@
-p
-  font-family: "minion-pro",serif
+$serif: "minion-pro",serif
+$heading: "abril-fatface",serif
+$sans-serif: "brandon-grotesque",sans-serif
+
+
+body, p
+  font-family: $serif
   font-style: normal
   font-weight: 400
 
 h1, h2, h3, h4
   font-size: 1.6em
-  font-family: "abril-fatface",serif
+  font-family: $heading
   font-style: italic
 
 h5
-  font-family: "abril-fatface",serif
-  font-style: italic
+  font-family: $heading
 
 .title
   font-weight: 900
 
 #about-footer h4, #room-image-text p
-  font-family: "brandon-grotesque",sans-serif
+  font-family: $sans-serif
   font-style: normal
