--- a/assets/sass/_rooms.sass
+++ b/assets/sass/_rooms.sass
@@ -23,7 +23,7 @@
   background-color: $blue2
   bottom: 0
   left: 0
-  background: rgba(141, 161, 170, 0.4)
+  //background: rgba(141, 161, 170, 0.4)
   position: absolute
   width: 100%
 
@@ -37,11 +37,13 @@
     padding: 0
     margin-bottom: 0
     text-transform: uppercase
+    font-family: $heading
+    font-style: normal
 
   p
     display: inline
     font-size: 0.8em
-    font-weight: 900
+    font-family: inherit
 
   .top span
     margin-bottom: 0
