starting over like a bad breakup

--- a/assets/sass/_rates.sass
+++ b/assets/sass/_rates.sass
@@ -1,12 +1,11 @@
-#rates-wrapper
+#rates
   text-align: center
   margin-top: 40px
   background-color: $blue2
   height: 690px  /* ONLY MOBILE */
 
-#rates-head h4
+#rates h1
   color: $black3
-  text-align: center
   position: relative
   top: -20px
 
