--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -9,6 +9,8 @@
 // modular Sass saves lives
 @import "color-vars"
 @import "fonts"
+@import "media-queries"
+@import "new-styles"
 @import "icons"
 @import "menu"
 @import "about"
@@ -19,7 +21,6 @@
 @import "location"
 @import "contact"
 @import "carousel"
-@import "media-queries"
 @import "header"
 
 
