--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -12,6 +12,7 @@ h1, h2, h3, h4
   font-size: 1.6em
   font-family: $heading
   font-style: italic
+  text-align: center
 
 h5
   font-family: $heading
