added the orante symbol & test document called maps

--- a/assets/sass/_enquire.sass
+++ b/assets/sass/_enquire.sass
@@ -1,10 +1,15 @@
 #enquire-outer-wrapper
   background-color: $black1
+  margin-top: -14px
 
 #enquire-inner-wrapper
   background-color: $black3
   position: relative
   top: 20px
+  margin: 1em
+  top: -40px
+  min-height: 480px
+
 
 #enquire-submit
   text-align: center
@@ -42,6 +47,11 @@ form #name
   h4
     text-align: center
     color: $white1
+    font-size: 2em
     padding-top: 20px
     padding-bottom: 20px
     font-family: $heading
+
+.form-group
+  top: -60px
+  position: relative
