--- a/assets/sass/_facilities.sass
+++ b/assets/sass/_facilities.sass
@@ -1,3 +1,6 @@
+#facilities
+  clear:both
+
 #facilities-title h4
   color: $black3
   text-align: center
@@ -9,8 +12,8 @@
 
   h5
     position: relative
-    left: 5px
-    padding: 10px
+    left: 40px
+    padding-top: 55px
     color: $grey2
     font-family: $sans-serif
     font-size: 1.4em
@@ -25,8 +28,7 @@
 
   h5
     position: relative
-    left: 5px
-    padding: 10px
+    left: 15px
     color: $grey2
     font-family: $sans-serif
 
