--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -23,3 +23,15 @@ h5
 #about-footer h4, #room-image-text p
   font-family: $sans-serif
   font-style: normal
+
+h1::after
+  
+  background: url('http://cl.ly/0Z3A1D3R3o1T/ornate-2.svg') no-repeat
+  display: block
+  content: ' '
+  background-size: 50px
+  padding-top: 10px
+  height: 20px
+  margin: 0 auto
+  color: $black3
+  width: 100px
