--- a/assets/sass/_location.sass
+++ b/assets/sass/_location.sass
@@ -2,9 +2,14 @@
   color: $black3
   text-align: center
 
-#location-wrapper
+#location
   padding-left: 10px
   padding-right: 10px
+  clear: both
+  margin-bottom: 50px
+
+#location p
+  margin-top: 2em
 
 #location-map
   padding-bottom: 20px
