--- a/assets/sass/_contact.sass
+++ b/assets/sass/_contact.sass
@@ -1,8 +1,25 @@
-#contact-us-wrapper
+#contact
   margin-top: 40px
   background-color: $blue1
+  clear: both
+  height: 450px
 
-#contact-title h4
+.form-horizontal
+  background: darken($blue1,5%)
+  padding: 7em 0
+  text-align: center
+  margin-top: -3em
+  width: 80%
+  margin: 0 auto
+  // @media (min-width: $screen-md)
+  // width: 70%
+  // margin-top: -3em
+  // margin-left: 9em
+
+
+
+
+#contact-title h1
   color: $black1
   text-align: center
   position: relative
@@ -14,7 +31,8 @@
   margin: 0
   text-transform: uppercase
 
-#contact-submit
+.btn-send
   text-align: center
   margin-bottom: 20px
   background-color: $black1
+  color: white
