set a fix container size

--- a/assets/sass/_facilities.sass
+++ b/assets/sass/_facilities.sass
@@ -23,8 +23,10 @@
     float: left
 
 #minor-icons
-  padding-top: 20px
-  padding-bottom: 20px
+  padding: 40px 0
+
+#minor-icons > div > div
+  margin-bottom: 30px
 
   h5
     position: relative
