--- a/assets/sass/_media-queries.sass
+++ b/assets/sass/_media-queries.sass
@@ -76,3 +76,10 @@
     span
       float: left
       margin-left: 20px
+
+
+@media (min-width: $screen-md)
+
+  /* contact form container  */
+  .form-horizontal
+    width: 80%
