--- a/assets/sass/_new-styles.scss
+++ b/assets/sass/_new-styles.scss
@@ -14,14 +14,19 @@ section {
 body {
 
 	padding-top: 50px;
+	background: #ececec;
 }
 
 
 .container {
 
-	width: 100%;
+	max-width: 1135px;
+	background: white;
 	padding: 0;
 	margin: 0;
+	margin: 0 auto;
+	border: 1px solid #d8d8d8;
+
 }
 
 .row {
